{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 25,
  "lineage": "50259798-f6e4-b653-bf9f-0189f9ead3a3",
  "resources": [
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linux-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/linux-rg/providers/Microsoft.Network/networkInterfaces/n01603642-c-vm-nic1",
            "internal_domain_name_suffix": "0hg4cfinjkzu5fdd4s5c0qlg3g.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01603642-c-vm-ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/linux-rg/providers/Microsoft.Network/publicIPAddresses/n01603642-c-vm-pip2",
                "subnet_id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
              }
            ],
            "location": "canadacentral",
            "name": "n01603642-c-vm-nic1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "linux-rg",
            "tags": {
              "ContactEmail": "n01603642@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.linux.azurerm_public_ip.linux-pip",
            "module.networks.azurerm_subnet.network-subnet1",
            "module.networks.azurerm_virtual_network.network-vnet",
            "module.resource_groups.azurerm_resource_group.linux-rg",
            "module.resource_groups.azurerm_resource_group.network-rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/linux-rg/providers/Microsoft.Network/networkInterfaces/n01603642-c-vm-nic2",
            "internal_domain_name_suffix": "0hg4cfinjkzu5fdd4s5c0qlg3g.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01603642-c-vm-ipconfig2",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/linux-rg/providers/Microsoft.Network/publicIPAddresses/n01603642-c-vm-pip1",
                "subnet_id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
              }
            ],
            "location": "canadacentral",
            "name": "n01603642-c-vm-nic2",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "linux-rg",
            "tags": {
              "ContactEmail": "n01603642@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.linux.azurerm_public_ip.linux-pip",
            "module.networks.azurerm_subnet.network-subnet1",
            "module.networks.azurerm_virtual_network.network-vnet",
            "module.resource_groups.azurerm_resource_group.linux-rg",
            "module.resource_groups.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "linux-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01603642-c-vm1",
            "fqdn": "n01603642-c-vm1.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/linux-rg/providers/Microsoft.Network/publicIPAddresses/n01603642-c-vm-pip1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01603642-c-vm-pip1",
            "resource_group_name": "linux-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01603642@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.linux-rg",
            "module.resource_groups.azurerm_resource_group.network-rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01603642-c-vm2",
            "fqdn": "n01603642-c-vm2.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/linux-rg/providers/Microsoft.Network/publicIPAddresses/n01603642-c-vm-pip2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01603642-c-vm-pip2",
            "resource_group_name": "linux-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01603642@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.linux-rg",
            "module.resource_groups.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network-nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "location": "canadacentral",
            "name": "network-nsg1",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network-nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "location": "canadacentral",
            "name": "network-nsg2",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "network-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "name": "network-subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "module.networks.azurerm_virtual_network.network-vnet",
            "module.resource_groups.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "network-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "name": "network-subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "module.networks.azurerm_virtual_network.network-vnet",
            "module.resource_groups.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "network-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "network_security_group_id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "subnet_id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
          },
          "dependencies": [
            "module.networks.azurerm_network_security_group.network-nsg1",
            "module.networks.azurerm_subnet.network-subnet1",
            "module.networks.azurerm_virtual_network.network-vnet",
            "module.resource_groups.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "network-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "network_security_group_id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "subnet_id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
          },
          "dependencies": [
            "module.networks.azurerm_network_security_group.network-nsg2",
            "module.networks.azurerm_subnet.network-subnet2",
            "module.networks.azurerm_virtual_network.network-vnet",
            "module.resource_groups.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "network-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "15e1cdd1-4a0d-4fb3-9463-f4be2d4166ee",
            "id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet",
            "location": "canadacentral",
            "name": "network-vnet",
            "resource_group_name": "network-rg"
          },
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.windows",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "windows-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "n01603642-w-vm1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/windows-rg/providers/Microsoft.Network/networkInterfaces/n01603642-w-vm1-nic",
            "internal_domain_name_suffix": "0hg4cfinjkzu5fdd4s5c0qlg3g.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01603642-w-vm1-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/windows-rg/providers/Microsoft.Network/publicIPAddresses/n01603642-w-vm1-pip",
                "subnet_id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
              }
            ],
            "location": "canadacentral",
            "name": "n01603642-w-vm1-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "windows-rg",
            "tags": {
              "ContactEmail": "n01603642@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.networks.azurerm_subnet.network-subnet2",
            "module.networks.azurerm_virtual_network.network-vnet",
            "module.resource_groups.azurerm_resource_group.network-rg",
            "module.resource_groups.azurerm_resource_group.windows-rg",
            "module.windows.azurerm_public_ip.windows-pip"
          ]
        }
      ]
    },
    {
      "module": "module.windows",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "windows-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "n01603642-w-vm1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01603642-w-vm1",
            "fqdn": "n01603642-w-vm1.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/cc5410f6-a653-4888-8148-84d64421a390/resourceGroups/windows-rg/providers/Microsoft.Network/publicIPAddresses/n01603642-w-vm1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01603642-w-vm1-pip",
            "resource_group_name": "windows-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01603642@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.network-rg",
            "module.resource_groups.azurerm_resource_group.windows-rg"
          ]
        }
      ]
    }
  ]
}